--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ django-tables2==1.21.2
 django-jsonfield==1.0.1
 django-freeze==0.6.4
 django-extensions==2.0.7
+django-pandas==0.5.
+pandas==0.23.4
 mpld3
 jinja2
