--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-astropy==1.1.2
-Django==2.0.7
-numpy>=1.11
-matplotlib>=2.2.2
-django-tables2==1.21.2
+astropy==3.1.1
+Django==2.1.5
+numpy==1.16.0
+matplotlib==3.0.2
+django-tables2==2.0.4
 django-jsonfield==1.0.1
 django-freeze==0.6.4
-django-extensions==2.0.7
-django-pandas==0.5.
-pandas==0.23.4
-mpld3
-jinja2
+django-extensions==2.1.4
+django-pandas==0.6.0
+pandas==0.24.0
+mpld3==0.3
+jinja2==2.10
