--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 astropy==3.1.1
+beautifulsoup4==4.7.1
 Django==2.1.5
-numpy==1.16.0
-matplotlib==3.0.2
-django-tables2==2.0.4
-django-jsonfield==1.0.1
-django-freeze==0.6.4
 django-extensions==2.1.4
+django-freeze==0.6.4
+django-jsonfield==1.0.1
 django-pandas==0.6.0
-pandas==0.24.0
+django-tables2==2.0.4
+Jinja2==2.10
+lxml==4.3.1
+matplotlib==3.0.2
 mpld3==0.3
-jinja2==2.10
+numpy==1.16.0
+pandas==0.24.0
+requests==2.21.0
