--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,17 @@ astropy==3.1.1
 beautifulsoup4==4.7.1
 Django==2.1.5
 django-extensions==2.1.4
+django-filebrowser-no-grappelli==3.7.7
 django-freeze==0.6.4
 django-jsonfield==1.0.1
 django-pandas==0.6.0
 django-tables2==2.0.4
+django-tinymce4-lite==1.7.4
 Jinja2==2.10
 lxml==4.3.1
 matplotlib==3.0.2
 mpld3==0.3
 numpy==1.16.0
 pandas==0.24.0
+Pillow==5.4.1
 requests==2.21.0
