--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astropy==3.1.1
 beautifulsoup4==4.7.1
+bokeh==1.0.4
 Django==2.1.5
 django-extensions==2.1.4
 django-filebrowser-no-grappelli==3.7.7
@@ -11,7 +12,6 @@ django-tinymce4-lite==1.7.4
 Jinja2==2.10
 lxml==4.3.1
 matplotlib==3.0.2
-mpld3==0.3
 numpy==1.16.0
 pandas==0.24.0
 Pillow==5.4.1
