--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ Django==2.1.7
 django-debug-toolbar==1.11
 django-extensions==2.1.4
 django-filebrowser-no-grappelli==3.7.7
+django-filter==2.1.0
 django-jsonfield==1.0.1
 django-tinymce4-lite==1.7.4
+djangorestframework==3.9.2
 lxml==4.3.1
+Markdown==3.1
 numpy==1.16.2
 pandas==0.24.0
 Pillow==5.4.1
