--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-filter==2.1.0
 django-jsonfield==1.0.1
 django-tinymce4-lite==1.7.4
 djangorestframework==3.9.2
+djangorestframework-datatables
 lxml==4.3.1
 Markdown==3.1
 numpy==1.16.2
