--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ django-jsonfield==1.0.1
 django-tinymce4-lite==1.7.4
 djangorestframework==3.9.2
 djangorestframework-datatables
+ipython==7.4.0
 lxml==4.3.1
 Markdown==3.1
+matplotlib==3.0.3
 numpy==1.16.2
 pandas==0.24.0
 Pillow==5.4.1
