--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.7.1
 bokeh==1.0.4
 Django==2.1.7
 django-debug-toolbar==1.11
+django-environ==0.4.5
 django-extensions==2.1.4
 django-filebrowser-no-grappelli==3.7.7
 django-filter==2.1.0
@@ -18,4 +19,5 @@ numpy==1.16.2
 pandas==0.24.0
 Pillow==5.4.1
 requests==2.21.0
+sentry-sdk==0.7.10
 xlwt==1.3.0
