--- a/settings/.env.example
+++ b/settings/.env.example
@@ -1,6 +1,7 @@
 DEBUG=True
 SECRET_KEY=
-ALLOWED_HOST=supaharris.com
+ALLOWED_HOST1=supaharris.com
+ALLOWED_HOST2=www.supaharris.com
 
 DATABASE_URL=sqlite:///db.sqlite3
 # DATABASE_URL=mysql://user:passworf@localhost:3306/db_name
