--- a/settings/.env.example
+++ b/settings/.env.example
@@ -1,10 +1,17 @@
 DEBUG=True
-SECRET_KEY=
-ALLOWED_HOST1=supaharris.com
-ALLOWED_HOST2=www.supaharris.com
 
+# One can generate secret key e.g. with `tr -dc 'A-Za-z0-9' < /dev/urandom | head -c64 && echo`
+SECRET_KEY=secret
+
+# For running the sqlite3 setup, use the settings below.
 DATABASE_URL=sqlite:///db.sqlite3
-# DATABASE_URL=mysql://user:passworf@localhost:3306/db_name
+
+# Alternatively, for running the full stack, use the database settings below.
+# Make sure that the user+password matches the ones in the docker-compose file.
+# Note that you can overwrite the defaults by exporting the environment variables
+# in your shell, e.g. `export SUPAHARRIS_MYSQL_DATABASE=dbname`
+# Note that 'supaharris-mariadb' matches the container_name in the docker-compose file.
+# DATABASE_URL=mysql://dbuser:dbpassword@supaharris-mariadb:3306/supaharris
 
 EMAIL_URL=consolemail://
 # EMAIL_URL=smtp+tls://username:password@localhost:587
