--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
 astropy==3.1.2
 beautifulsoup4==4.7.1
 bokeh==1.0.4
-Django==2.2
+Django==2.2.4
 django-debug-toolbar==1.11
 django-environ==0.4.5
-django-extensions==2.1.4
-django-filebrowser-no-grappelli==3.7.7
-django-filter==2.1.0
-django-jsonfield==1.0.1
-django-tinymce4-lite==1.7.4
-djangorestframework==3.9.2
+django-extensions==2.2.1
+django-filebrowser-no-grappelli==3.7.8
+django-filter==2.2.0
+django-jsonfield==1.2.0
+django-tinymce4-lite==1.7.5
+djangorestframework==3.10.2
 djangorestframework-datatables
-ipython==7.4.0
+ipython==7.7.0
 lxml==4.3.1
 Markdown==3.1
 matplotlib==3.0.3
+mysqlclient==1.4.2
 numpy==1.16.2
 pandas==0.24.0
-Pillow==5.4.1
+Pillow==6.1.0
 requests==2.21.0
+uwsgi==2.0.18
 sentry-sdk==0.7.10
 xlwt==1.3.0
