Use Docker resolver /w variable for uwsgi_pass instead of setting an upstream. Run the security.conf add_header commands in every server block. Ask browsers to cache static. Experiment with microcache.

--- a/nginx/conf/supaharris.com.conf
+++ b/nginx/conf/supaharris.com.conf
@@ -1,7 +1,5 @@
-upstream django {
-    server supaharris-django:1337;
-}
-
+uwsgi_cache_path /var/cache/nginx/django levels=1:2 keys_zone=microcache:10m 
+    max_size=100m inactive=600s use_temp_path=off;
 
 server {
     listen 80 default_server;
@@ -13,6 +11,7 @@ server {
     include /etc/nginx/apps/cloudflare.conf;
 
     location / {
+        include /etc/nginx/conf.d/security.conf;
         return 301 https://$server_name$request_uri;
     }
 }
@@ -32,12 +31,46 @@ server {
     include /etc/nginx/apps/cloudflare.conf;
 
     location /static {
+        include /etc/nginx/apps/cache-static.conf;
+        include /etc/nginx/conf.d/security.conf;
+
         alias /var/www/supaharris/static;
         log_not_found off;
         access_log off;
     }
 
     location / {
+        # Setup var defaults
+        set $no_cache "1";
+        # If non GET/HEAD, don't cache & mark user as uncacheable for 1 second via cookie
+        if ($request_method !~ ^(GET|HEAD)$) {
+            set $no_cache "1";
+        }
+        # Drop no cache cookie if need be
+        # (for some reason, add_header fails if included in prior if-block)
+        if ($no_cache = "1") {
+            add_header Set-Cookie "_mcnc=1; Max-Age=3; Path=/";            
+            add_header X-Microcachable "0";
+        }
+        # Bypass cache if no-cache cookie is set
+        if ($http_cookie ~* "_mcnc") {
+            set $no_cache "1";
+        }
+        # Bypass cache if flag is set
+        uwsgi_no_cache $no_cache;
+        uwsgi_cache_bypass $no_cache;
+
+        uwsgi_cache microcache;
+        uwsgi_cache_key $scheme$host$request_method$request_uri;
+        add_header X-Cache-Status $upstream_cache_status;
+
+        # Only cache valid HTTP 200 responses for 2 second
+        uwsgi_cache_valid 200 2s;
+        # Serve from cache if currently refreshing
+        uwsgi_cache_use_stale updating;
+
+        # Set files larger than 1M to stream rather than cache
+        uwsgi_max_temp_file_size 1M;
         proxy_set_header X-Forwarded-Ssl on;
         proxy_set_header Connection "";
         proxy_set_header Host $http_host;
@@ -46,7 +79,11 @@ server {
         # proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
         proxy_set_header X-Frame-Options SAMEORIGIN;
 
-        uwsgi_pass django;
+        # Point nginx to the backend
+        include /etc/nginx/conf.d/security.conf;
         include /etc/nginx/uwsgi_params;
+        resolver 127.0.0.11 valid=30s;
+        set $upstream django:1337;
+        uwsgi_pass $upstream;
     }
 }
