Template hacks for django_extension / graph_models [to style 'm in Star Clusters conference poster theme]

--- a/.dockerignore
+++ b/.dockerignore
@@ -15,6 +15,7 @@ fixtures
 coveragerc
 docker-compose*
 nginx/
+data/
 
 # Development storage location, and do not want to copy secrets into the image
 db.sqlite3
