--- a/.dockerignore
+++ b/.dockerignore
@@ -15,7 +15,7 @@ fixtures
 coveragerc
 docker-compose*
 nginx/
-data/
+profiles/
 
 # Development storage location, and do not want to copy secrets into the image
 db.sqlite3
