--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 astropy==3.1.2
 beautifulsoup4==4.7.1
 bokeh==1.0.4
+coverage==4.5.4
 Django==2.2.4
 django-debug-toolbar==1.11
 django-environ==0.4.5
 django-extensions==2.2.1
 django-filebrowser-no-grappelli==3.7.8
 django-filter==2.2.0
+django-html-validator==0.5.1
 django-jsonfield==1.2.0
 django-silk==3.0.2
 django-tinymce4-lite==1.7.5
 djangorestframework==3.10.2
 djangorestframework-datatables
+factory-boy==2.12.0
 ipython==7.7.0
 lxml==4.3.1
 Markdown==3.1
@@ -21,6 +24,7 @@ numpy==1.16.2
 pandas==0.24.0
 Pillow==6.1.0
 requests==2.21.0
+requests-mock==1.5.2
 uwsgi==2.0.18
 sentry-sdk==0.7.10
 xlwt==1.3.0
