Remove container_name to allow scale of Django

--- a/settings/.env.example
+++ b/settings/.env.example
@@ -10,8 +10,8 @@ DATABASE_URL=sqlite:///db.sqlite3
 # Make sure that the user+password matches the ones in the docker-compose file.
 # Note that you can overwrite the defaults by exporting the environment variables
 # in your shell, e.g. `export SUPAHARRIS_MYSQL_DATABASE=dbname`
-# Note that 'supaharris-mariadb' matches the container_name in the docker-compose file.
-# DATABASE_URL=mysql://dbuser:dbpassword@supaharris-mariadb:3306/supaharris
+# Note that 'supaharris-mariadb' matches the name of the service in the docker-compose file.
+# DATABASE_URL=mysql://dbuser:dbpassword@mariadb:3306/supaharris
 
 EMAIL_URL=consolemail://
 # EMAIL_URL=smtp+tls://username:password@localhost:587
