--- a/settings/.env.example
+++ b/settings/.env.example
@@ -17,3 +17,6 @@ EMAIL_URL=consolemail://
 # EMAIL_URL=smtp+tls://username:password@localhost:587
 
 SENTRY_DSN_API=
+
+# https://ui.adsabs.harvard.edu/user/settings/token
+ADS_API_TOKEN=
