--- a/staticfiles/package.json
+++ b/staticfiles/package.json
@@ -29,8 +29,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.7.0",
+        "bokehjs": "^1.3.4",
         "bootstrap": "^4.3.1",
         "chart.js": "2.7.3",
+        "cookieconsent": "^3.1.1",
         "datatables.net-bs4": "1.10.19",
         "jquery": "^3.4.1",
         "jquery-typeahead": "^2.10.6",
