--- a/settings/.env.example
+++ b/settings/.env.example
@@ -12,6 +12,9 @@ DATABASE_URL=sqlite:///db.sqlite3
 # in your shell, e.g. `export SUPAHARRIS_MYSQL_DATABASE=dbname`
 # Note that 'supaharris-mariadb' matches the name of the service in the docker-compose file.
 # DATABASE_URL=mysql://dbuser:dbpassword@mariadb:3306/supaharris
+#
+CACHE_URL=dummycache://
+# CACHE_URL=redis://:password@supaharris_redis_1:6379/0
 
 EMAIL_URL=consolemail://
 # EMAIL_URL=smtp+tls://username:password@localhost:587
