--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,11 @@ services:
     restart: unless-stopped
     command: ['uwsgi', '--ini', 'uwsgi/supaharris.ini']
 
+  redis:
+    image: redis:alpine
+    restart: unless-stopped
+    command: 'redis-server ${REDIS_PASSWORD-}'
+
 
 networks:
   default:
