Travis /w sudo to create database II

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 addons:
   mariadb: '10.4'
 before_install:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
+  - sudo mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
 install:
   - pip install -r requirements.txt
 script:
