--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 ads==0.12.3
+astro-limepy==0.1.1
 astropy==4.0
 astroquery==0.4
 beautifulsoup4==4.8.2
@@ -25,8 +26,9 @@ mysqlclient==1.4.6
 numpy==1.18.1
 pandas==1.0.1
 Pillow==7.0.0
-requests==2.22.0
+requests==2.23.0
 requests-mock==1.7.0
+scipy==1.4.1
 uWSGI==2.0.18
-sentry-sdk==0.14.1
+sentry-sdk==0.14.2
 xlwt==1.3.0
