--- a/staticfiles/package.json
+++ b/staticfiles/package.json
@@ -28,8 +28,8 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-sb-admin.git"
     },
     "dependencies": {
+        "@bokeh/bokehjs": "^2.0.2",
         "@fortawesome/fontawesome-free": "5.11.2",
-        "bokehjs": "^1.4.0",
         "bootstrap": "^4.5.0",
         "chart.js": "2.8.0",
         "cookieconsent": "^3.1.1",
