--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 ads==0.12.3
 astro-limepy==0.1.1
-astropy==4.0.1
-astroquery==0.4
+astropy==4.0.1.post1
+astroquery==0.4.1
 beautifulsoup4==4.9.1
-bokeh==2.0.2
-coverage==5.1
-Django==2.2.11
+bokeh==2.1.1
+coverage==5.2.1
+Django==2.2.15
 django-debug-toolbar==2.2
 django-environ==0.4.5
-django-extensions==2.2.9
+django-extensions==3.0.4
 django-filebrowser-no-grappelli==3.8.0
-django-filter==2.2.0
+django-filter==2.3.0
 django-html-validator==0.5.1
 django-jsonfield==1.4.0
-django-silk==4.0.1
+django-silk==4.1.0
 django-tinymce4-lite==1.8.0
-djangorestframework==3.11.0
+djangorestframework==3.11.1
 djangorestframework-datatables==0.5.2
 factory-boy==2.12.0
-ipython==7.14.0
-lxml==4.5.0
+ipython==7.17.0
+lxml==4.5.2
 Markdown==3.2.2
-matplotlib==3.2.1
-mysqlclient==1.4.6
-numpy==1.18.4
-pandas==1.0.3
-Pillow==7.1.2
-requests==2.23.0
+matplotlib==3.3.0
+mysqlclient==2.0.1
+numpy==1.19.1
+pandas==1.1.0
+Pillow==7.2.0
+requests==2.24.0
 requests-mock==1.8.0
-scipy==1.4.1
-uWSGI==2.0.18
-sentry-sdk==0.14.4
+scipy==1.5.2
+uWSGI==2.0.19.1
+sentry-sdk==0.16.3
 xlwt==1.3.0
