--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astro-limepy==0.1.1
 astropy==4.0.1.post1
 astroquery==0.4.1
 beautifulsoup4==4.9.1
+black==19.10b0
 bokeh==2.2.1
 coverage==5.2.1
 Django==2.2.16
@@ -18,6 +19,8 @@ django-tinymce4-lite==1.8.0
 djangorestframework==3.11.1
 djangorestframework-datatables==0.5.2
 factory-boy==3.0.1
+flake8==3.8.3
+flake8-isort==4.0.0
 ipython==7.18.1
 lxml==4.5.2
 Markdown==3.2.2
@@ -26,6 +29,7 @@ mysqlclient==2.0.1
 numpy==1.19.2
 pandas==1.1.2
 Pillow==7.2.0
+pre-commit==2.7.1
 requests==2.24.0
 requests-mock==1.8.0
 scipy==1.5.2
