Updates for the test suite

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,8 @@ django_settings_module = settings.base
 ignore_errors = True
 
 [coverage:run]
-include = apps/*
-omit = *migrations*, *tests*
+include = apps/* tests/*
+omit = *migrations*,*tests*,venv*,.local/*,static/*,staticfiles/*,htmlcov/*,storage/*
 plugins =
     django_coverage_plugin
 
