--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ black==19.10b0
 bokeh==2.2.1
 coverage==5.2.1
 Django==2.2.16
+django-coverage-plugin==1.8.0
 django-debug-toolbar==2.2
 django-environ==0.4.5
 django-extensions==3.0.8
