--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,39 @@
 ads==0.12.3
 astro-limepy==0.1.1
-astropy==4.0.1.post1
+astropy==4.0.2
 astroquery==0.4.1
-beautifulsoup4==4.9.1
+beautifulsoup4==4.9.3
 black==19.10b0
-bokeh==2.2.0
-coverage==5.2.1
+bokeh==2.2.1
+coverage==5.3
 Django==2.2.16
 django-coverage-plugin==1.8.0
-django-debug-toolbar==2.2
+django-debug-toolbar==3.1.1
 django-environ==0.4.5
-django-extensions==3.0.8
+django-extensions==3.0.9
 django-filebrowser-no-grappelli==3.8.0
-django-filter==2.3.0
+django-filter==2.4.0
 django-html-validator==0.5.1
 django-jsonfield==1.4.0
 django-silk==4.1.0
 django-tinymce4-lite==1.8.0
-djangorestframework==3.11.1
+djangorestframework==3.12.1
 djangorestframework-datatables==0.5.2
-factory-boy==3.0.1
-flake8==3.8.3
+factory-boy==3.1.0
+flake8==3.8.4
 flake8-isort==4.0.0
 ipython==7.18.1
 lxml==4.5.2
-Markdown==3.2.2
-matplotlib==3.3.1
+Markdown==3.3
+matplotlib==3.3.2
 mysqlclient==2.0.1
 numpy==1.19.2
-pandas==1.1.2
+pandas==1.1.3
 Pillow==7.2.0
 pre-commit==2.7.1
 requests==2.24.0
 requests-mock==1.8.0
 scipy==1.5.2
 uWSGI==2.0.19.1
-sentry-sdk==0.17.4
+sentry-sdk==0.18.0
 xlwt==1.3.0
