--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,9 @@ repos:
     rev: master
     hooks:
       - id: trailing-whitespace
-        exclude: '.svg'
+        exclude: '.svg|.min.js|.min.js.map|staticfiles/vendor'
       - id: end-of-file-fixer
-        exclude: '.svg|.css'
+        exclude: '.svg|.css|.min.js|.min.js.map|staticfiles/vendor'
       - id: check-yaml
 
   - repo: https://github.com/psf/black
